# cirrus

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.dev.md  README.md  build.rs
.cargo/: config.toml
.ci/: install-qemu.sh  tools.Containerfile
.github/: dependabot.yml
.github/workflows/: build.yml  meson-armv7-unknown-linux-gnueabihf.ini  meson-zig-aarch64-unknown-linux-musl.ini  meson-zig-arm-unknown-linux-musl.ini  meson-zig-arm-unknown-linux-musleabihf.ini  meson-zig-x86_64-unknown-linux-musl.ini  publish-container-image.yml  publish-package.yml  publish.yml  setup-cross-env.sh  update-restic.yml
build-scripts/: Cargo.toml  cargo-package-flags  cargo-zig-linux-musl.env  meson-zig-aarch64-unknown-linux-musl.ini  meson-zig-x86_64-unknown-linux-musl.ini  no-qemu.sh  package.cargo-env  zig-cc-aarch64-unknown-linux-musl.sh  zig-cc-x86_64-unknown-linux-musl.sh
build-scripts/ci-tools/: Containerfile  cross-buildroot.sh
build-scripts/publish/: index.html
build-scripts/restic-bin/: Cargo.toml
build-scripts/restic-bin/src/download_restic/: downloader.rs  mod.rs  urls.rs
build-scripts/src/: container_image.rs  download.rs  generate_icons.rs  get_version.rs  lib.rs  main.rs  package.rs  update_vendor.rs
build-scripts/unix/: io.gitlab.fkrull.cirrus.Cirrus.desktop
build-scripts/windows/: Cirrus.appinstaller  new-self-signed-certificate.ps1
build-scripts/windows/appx/: AppxManifest.xml
bundled-exe/: Cargo.toml
bundled-exe/src/: lib.rs
bundled-restic/: Cargo.toml  build.rs
bundled-restic/src/: lib.rs
cirrus-actor/: Cargo.toml
cirrus-actor/src/: actor.rs  lib.rs  messages.rs  util.rs
cirrus-core/: Cargo.toml
cirrus-core/src/: appconfig.rs  cache.rs  lib.rs  restic.rs  restic_util.rs  schedule.rs  tag.rs
cirrus-core/src/config/: backup.rs  mod.rs  repo.rs
cirrus-core/src/index/: mod.rs
cirrus-core/src/model/: backup.rs  mod.rs  repo.rs
cirrus-core/src/restic/: mod.rs  process.rs  util.rs
cirrus-core/src/secrets/: keyring_disabled.rs  mod.rs  os_keyring.rs
cirrus-core/src/trigger/: cron.rs  mod.rs
cirrus-daemon/: Cargo.toml
cirrus-daemon-watchdog/: Cargo.toml
cirrus-daemon-watchdog/src/: main.rs
cirrus-daemon/src/: actor.rs  config_reload.rs  configreload.rs  daemon_config.rs  job_description.rs  job_queues.rs  jobs.rs  lib.rs  queues.rs  retry.rs  scheduler.rs  shutdown.rs  signal_handler.rs  suspend.rs
cirrus-daemon/src/job/: backup.rs  cancellation.rs  mod.rs  queues.rs  runner.rs
cirrus-daemon/src/job_description/: backup.rs  mod.rs
cirrus-daemon/src/jobs/: mod.rs  repo.rs
cirrus-daemon/src/jobs/runner/: backup.rs  mod.rs
cirrus-daemon/src/notifications/: mod.rs  notify.rs  winrt.rs
cirrus-desktop-ui/: Cargo.toml
cirrus-desktop-ui/icons/: Makefile  export-merged-png-icon.sh
cirrus-desktop-ui/src/: lib.rs  model.rs  windows.rs  xdg.rs
cirrus-desktop-ui/src/notifications/: mod.rs  notify.rs  windows.rs  winrt.rs  xdg.rs
cirrus-desktop-ui/src/status_icon/: mod.rs  model.rs  windows.rs  xdg.rs
cirrus-gui/: Cargo.toml
cirrus-gui/src/: main.rs
cirrus-index/: Cargo.toml
cirrus-index/benches/: db.rs  index_insert.rs
cirrus-index/src/: db.rs  lib.rs  migrations.rs  restic.rs  restic_json.rs
cirrus-messages/: Cargo.toml
cirrus-messages/src/: actor.rs  lib.rs  send.rs
cirrus-restart-helper/: Cargo.toml
cirrus-restart-helper/src/: main.rs
cirrus-self/: Cargo.toml
cirrus-self/src/: lib.rs
cirrus-self/src/resources/: cirrus-daemon.vbs  cirrus.service
cirrus-web/: Cargo.toml
cirrus-web/src/: backup.rs  base.rs  index.rs  lib.rs  repo.rs
cirrus-web/src/assets/: mod.rs  static_files.rs  templates.rs
cirrus-web/src/routes/: mod.rs
cirrus-web/src/static_files/: mod.rs
cirrus-web/templates/: backup.html  base.html  index.html  repo.html
cirrus-windows-wrapper/: Cargo.toml
cirrus-windows-wrapper/src/: main.rs
events/: Cargo.toml
events/src/: lib.rs
example/: test-backup-every-minute.toml  test-backup.toml  test-secret.toml
human-schedule/: Cargo.toml
human-schedule/src/: lib.rs  parse.rs  schedule.rs  serde.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  main.rs  test_binary.rs  test_binary_main.rs
integration-tests/tests/: it.rs
integration-tests/tests/cirrus/: mod.rs
integration-tests/tests/cirrus_core/: mod.rs  restic.rs  restic_process.rs
package/: Cargo.toml  New-SelfSignedCert.ps1  container-image.sh  extract-public.ps1  import-base64-certificate.ps1  import-certificate.ps1  new-self-signed-certificate.ps1
package/src/: lib.rs  restic.rs
package/windows/: AppxManifest.xml  appx.sh
package/windows/appx/: AppxManifest.xml
restic-bin/: Cargo.toml  build.rs
restic-bin/restic-bin-build/: Cargo.toml
restic-bin/restic-bin-build/src/: download.rs  lib.rs  urls.rs
restic-bin/src/: lib.rs
restic-bin/src/download_restic/: downloader.rs  mod.rs  urls.rs
restigo/: Cargo.toml  build.rs  go.mod  go.sum
restigo/src/: lib.rs  main.rs
schedule-dsl/: Cargo.toml
schedule-dsl/src/: lib.rs  parse.rs  schedule.rs  serde.rs
schedule-specs/: Cargo.toml
schedule-specs/src/: lib.rs  parse.rs  serde.rs
selfinstaller/: Cargo.toml  LICENSE  README.md
selfinstaller/examples/: scheduledjob.rs  scheduledjob.service  scheduledjob.timer
selfinstaller/src/: lib.rs  steps.rs
selfinstaller/src/steps/: directory.rs  file.rs  systemd.rs  windows.rs
selfinstaller/tests/: it.rs
shindig/: Cargo.toml
shindig/src/: lib.rs
snisni/: Cargo.toml  DBusMenu.xml
snisni/examples/: layout-change.rs  simple.rs  sni.rs  tokio-channels.rs
snisni/src/: dbus.rs  lib.rs  menu.rs  menubuilder.rs  notifier.rs  sni.rs  watcher.rs
src/: cli.rs  config.rs  daemon.rs  jobs.rs  lib.rs  main.rs  pause.rs  restic.rs  scheduler.rs  secrets.rs
src/commands/: daemon.rs  desktop.rs  files.rs  generate.rs  index.rs  internal.rs  mod.rs  repo_contents.rs  secret.rs
src/config/: backup.rs  mod.rs  repo.rs
src/jobs/: mod.rs  repo.rs  runner.rs
src/model/: backup.rs  mod.rs  repo.rs
src/resources/: cirrus.service
(+9 files in other folders)
