[package]
name = "cirrus"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[workspace]
members = [
    "cirrus-actor",
    "cirrus-core",
    "cirrus-daemon",
    "cirrus-desktop-ui",
    "cirrus-self",
    "integration-tests",
    "build-scripts",
    "build-scripts/restic-bin",
    "selfinstaller",
]

[dependencies]
cirrus-core = { path = "cirrus-core" }
cirrus-actor = { path = "cirrus-actor" }
cirrus-daemon = { path = "cirrus-daemon" }
cirrus-desktop-ui = { path = "cirrus-desktop-ui", optional = true }
cirrus-self = { path = "cirrus-self", optional = true }
eyre = "0.6.1"
clap = "3.0.0-beta.4"
hostname = "0.3.1"
rpassword = "5.0.0"
termcolor = "1.1.0"
toml = "0.5.6"
color-eyre = "0.5.6"
dirs-next = "2.0.0"
tracing = "0.1.23"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt", "ansi", "registry", "chrono", "tracing-log"] }
tracing-appender = "0.1.2"
clap_generate = "3.0.0-beta.4"

[dependencies.tokio]
version = "1.0.0"
features = ["macros", "signal", "rt-multi-thread"]

[features]
default = []
daemon-supervisor = []
selfinstaller = ["cirrus-self"]
desktop = ["cirrus-core/keyring", "cirrus-desktop-ui"]
