[package]
name = "cirrus"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[workspace]
members = [
    "cirrus-core",
    "cirrus-daemon",
    "cirrus-desktop-ui",
    "cirrus-self",
    "integration-tests",
    "build-scripts",
    "build-scripts/restic-bin",
    "selfinstaller",
    "schedule-dsl",
    "shindig",
]
exclude = ["restigo"]

[dependencies]
cirrus-core = { path = "cirrus-core" }
cirrus-daemon = { path = "cirrus-daemon" }
cirrus-desktop-ui = { path = "cirrus-desktop-ui", optional = true }
cirrus-self = { path = "cirrus-self", optional = true }
restigo = { path = "restigo", optional = true }
eyre = "0.6.1"
clap = { version = "4.0.10", features = ["derive", "env"] }
hostname = "0.3.1"
rpassword = "7.0.0"
termcolor = "1.1.0"
toml = "0.5.6"
color-eyre = "0.6.0"
dirs-next = "2.0.0"
tracing = "0.1.23"
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["fmt", "ansi", "registry", "local-time", "tracing-log"] }
time = { version = "0.3.5", features = ["macros"] }
shindig = { version = "0.1.0", path = "shindig" }

[dependencies.tokio]
version = "1.0.0"
features = ["signal", "rt-multi-thread"]

[features]
# This feature enables the CLI flag for bundled restic as well as the behavior to handle it; it does *NOT* actually
# bundle restic on its own.
bundled-restic-support = []

# Link all of restic so that restic can be run by running the main binary with a specific environment variable set.
internal-restic = ["bundled-restic-support", "restigo"]

default = ["cirrus-core/keyring", "cirrus-self", "cirrus-desktop-ui"]
