[package]
name = "cirrus"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[workspace]
members = [
    "cirrus-core",
    "cirrus-daemon",
    "cirrus-desktop-ui",
    "cirrus-index",
    "cirrus-self",
    "events",
    "integration-tests",
    "build-scripts",
    "selfinstaller",
    "schedule-dsl",
]

[dependencies]
cirrus-core = { path = "cirrus-core", features = ["keyring"] }
cirrus-daemon = { path = "cirrus-daemon" }
cirrus-desktop-ui = { path = "cirrus-desktop-ui", optional = true }
cirrus-index = { version = "0.1.0", path = "cirrus-index" }
cirrus-self = { path = "cirrus-self", optional = true }
eyre = "0.6.1"
clap = { version = "4.0.10", features = ["derive", "env"] }
hostname = "0.3.1"
rpassword = "7.0.0"
termcolor = "1.1.0"
toml = "0.5.6"
color-eyre = "0.6.0"
dirs-next = "2.0.0"
tracing = "0.1.23"
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["fmt", "ansi", "registry", "local-time", "tracing-log"] }
time = { version = "0.3.5", features = ["macros"] }
events = { version = "0.2.0", path = "events" }
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
rusqlite = "0.28.0"

[features]
# enables the CLI flag for bundled restic as well as the behavior to handle it, i.e. running restic from next to the
# cirrus binary instead of from PATH
bundled-restic-support = []

default = [
    "cirrus-self",
    "cirrus-desktop-ui",
    "rusqlite/bundled",
]
