[package]
name = "build-scripts"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
eyre = "0.6.3"
restic-bin = { path = "restic-bin", features = ["download"] }
target-lexicon = "0.11.2"
tempfile = "3.2.0"
time = { version = "0.3.1", default-features = false, features = ["std"] }
xshell = "0.1.8"
zip = "0.5.10"
