[package]
name = "build-scripts"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
argh = "0.1.4"
eyre = "0.6.3"
restic-bin = { path = "restic-bin", features = ["download"] }
tar = "0.4.38"
tempfile = "3.2.0"
time = { version = "0.3.1", default-features = false, features = ["std"] }
xshell = "0.1.8"
xz2 = { git = "https://github.com/alexcrichton/xz2-rs.git", features = ["static"] }
