[package]
name = "cirrus-core"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
eyre = "0.6.1"
futures = "0.3.25"
schedule-dsl = { path = "../schedule-dsl", features = ["serde", "time"] }
keyring = { version = "1.0.0", optional = true }
log = "0.4.8"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.20"
toml = "0.5.6"
tokio-stream = { version = "0.1.6", features = ["io-util"] }
pin-project = "1.0.7"
time = { version = "0.3.7", features = ["local-offset"] }
libc = "0.2.137"
tokio = { version = "1.21.2", features = ["fs", "process", "io-util", "macros"] }
tracing = "0.1.37"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
atty = "0.2.14"

[dev-dependencies]
maplit = "1.0.2"
serde_json = "1.0.87"
tempfile = "3.2.0"
time = { version = "0.3.7", features = ["parsing"] }
