[package]
name = "cirrus-core"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
eyre = "0.6.1"
schedule-dsl = { path = "../schedule-dsl", features = ["serde", "time"] }
keyring = { version = "1.0.0", optional = true }
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.20"
toml = "0.5.6"
time = { version = "0.3.17", features = ["local-offset"] }
libc = "0.2.138"
tokio = { version = "1.23.0", features = ["fs", "process", "io-util", "time"] }
tracing = "0.1.37"
humantime-serde = "1.1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
atty = "0.2.14"

[dev-dependencies]
maplit = "1.0.2"
serde_json = "1.0.89"
tempfile = "3.2.0"
time = { version = "0.3.17", features = ["parsing"] }
