[package]
name = "cirrus-daemon"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
cirrus-core = { path = "../cirrus-core" }
async-trait = "0.1.41"
futures = "0.3.6"
eyre = "0.6.1"
uuid = { version = "1.1.2", features = ["v4"] }
notify = "5.0.0-pre.13"
tracing = "0.1.23"
tracing-futures = "0.2.4"
time = "0.3.7"
shindig = { version = "0.1.0", path = "../shindig" }

[dependencies.tokio]
version = "1.0.0"
features = ["signal", "time", "rt"]
