[package]
name = "cirrus-daemon"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
cirrus-core = { path = "../cirrus-core" }
eyre = "0.6.1"
uuid = { version = "1.1.2", features = ["v4"] }
notify = { version = "5.0.0", default-features = false }
tracing = "0.1.23"
time = "0.3.17"
events = { version = "0.2.0", path = "../events" }
tokio = { version = "1.23.0", features = ["fs", "signal", "time", "rt"] }
cirrus-index = { version = "0.1.0", path = "../cirrus-index" }
humantime = "2.1.0"
