[package]
name = "cirrus-desktop-ui"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[dependencies]
cirrus-core = { path = "../cirrus-core" }
cirrus-daemon = { path = "../cirrus-daemon" }
cirrus-actor = { path = "../cirrus-actor" }
async-trait = "0.1.41"
eyre = "0.6.1"
log = "0.4.11"
once_cell = "1.4.1"

[target.'cfg(windows)'.dependencies]
trayicon = { version = "0.1.0-beta.18", features = ["winit"] }
winit = "0.22.2"
winreg = "0.8.0"

[target.'cfg(target_family = "unix")'.dependencies]
ksni = "0.1.2"
png = "0.16.7"
