[package]
name = "cirrus-desktop-ui"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
cirrus-core = { path = "../cirrus-core" }
cirrus-daemon = { path = "../cirrus-daemon" }
cirrus-actor = { path = "../cirrus-actor" }
async-trait = "0.1.41"
eyre = "0.6.1"
log = "0.4.11"
once_cell = "1.4.1"
opener = "0.5.0"
tracing = "0.1.26"

[target.'cfg(windows)'.dependencies]
trayicon = { version = "0.1.3", features = ["winit"] }
# note: must match dependency version in trayicon
winit = "0.25.0"
winreg = "0.10.1"

[target.'cfg(target_family = "unix")'.dependencies]
ksni = "0.2.0"
png = "0.17.2"
zbus = "2.0.0"
