[package]
name = "cirrus-desktop-ui"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
cirrus-core = { path = "../cirrus-core" }
cirrus-daemon = { path = "../cirrus-daemon" }
eyre = "0.6.1"
once_cell = "1.16.0"
opener = "0.5.0"
tracing = "0.1.26"
events = { version = "0.2.0", path = "../events" }
tokio = { version = "1.21.2", features = ["macros"] }

[target.'cfg(windows)'.dependencies]
trayicon = { version = "0.1.4", git = "https://github.com/fkrull/trayicon-rs.git", rev = "4e9f223" }
winit = "0.27.3"
winreg = "0.10.1"

[target.'cfg(target_family = "unix")'.dependencies]
ksni = "0.2.0"
png = "0.17.7"
dbus = "0.9.6"
