[package]
name = "cirrus-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.28.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
time = { version = "0.3.15", features = ["serde-well-known"] }

[dev-dependencies]
time = { version = "0.3.15", features = ["macros"] }
