[package]
name = "cirrus-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirrus-core = { version = "0.1.0", path = "../cirrus-core" }
eyre = "0.6.8"
futures = "0.3.25"
itertools = "0.10.5"
rusqlite = "0.28.0"
rusqlite_migration = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_rusqlite = "0.31.0"
time = { version = "0.3.17", features = ["serde-well-known"] }
tokio = { version = "1.24.1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["io-util"] }

[dev-dependencies]
criterion = "0.4.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tempfile = "3.3.0"
time = { version = "0.3.17", features = ["macros"] }
tokio = { version = "1.24.1", features = ["macros"] }

[[bench]]
name = "db"
harness = false
