[package]
name = "cirrus-messages"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
thiserror = "1.0.21"

[dependencies.futures]
version = "0.3.6"
default-features = false
features = ["std"]
