[package]
name = "cirrus-self"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
eyre = "0.6.5"
selfinstaller = { path = "../selfinstaller" }

[target.'cfg(windows)'.dependencies]
windirs = "1.0.1"

[target.'cfg(not(windows))'.dependencies]
dirs-next = "2.0.0"
