[package]
name = "cirrus-web"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[dependencies]
cirrus-core = { path = "../cirrus-core" }
cirrus-daemon = { path = "../cirrus-daemon" }
include_dir = { version = "0.6.0", optional = true }
anyhow = "1.0.30"
log = "0.4.8"
serde = { version = "1.0.115", features = ["derive"] }
tera = "1.5.0"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
#branch = "master"
rev = "02b79e28f71ccbd1fce0e369469c92caedb38cd8"

[features]
bundled-assets = ["include_dir"]
