[package]
name = "events"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
thiserror = "1.0.37"
tokio = { version = "1.22.0", default-features = false, features = ["sync"] }
tracing = { version = "0.1.36", default-features = false }
