[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[dependencies]
maplit = "1.0.2"
tempfile = "3.2.0"

[dev-dependencies]
cirrus-core = { path = "../cirrus-core" }
eyre = "0.6.5"
futures = "0.3.15"
tokio = { version = "1.6.1", features = ["macros"] }
