[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2021"

[dependencies]
maplit = "1.0.2"
tempfile = "3.2.0"
cirrus = { path = ".." }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
eyre = "0.6.5"

[dev-dependencies]
assert_cmd = "2.0.7"
cirrus-core = { path = "../cirrus-core" }
toml = "0.5.8"
