[package]
name = "package"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
eyre = "0.6.3"
hex = "0.4.2"
sha2 = "0.9.2"
tempfile = "3.1.0"
ureq = { version = "1.5.2", default-features = false, features = ["native-tls"] }
xshell = { git = "https://github.com/fkrull/xshell.git", rev = "d6a493719b7f280caa42f8fffecdfe58af4b53ab" }
zip = "0.5.8"
