[package]
name = "restic-bin"
version = "0.1.0"
authors = ["Felix Krull <f_krull@gmx.de>"]
edition = "2018"

[dependencies]
bzip2 = { version = "0.4.1", optional = true }
hex = { version = "0.4.2", optional = true }
sha2 = { version = "0.9.2", optional = true }
tempfile = { version = "3.1.0", optional = true }
ureq = { version = "2.0.1", optional = true }
zip = { version = "0.5.8", optional = true }
thiserror = "1.0.24"
target-lexicon = "0.11.2"

[features]
download = ["bzip2", "hex", "sha2", "tempfile", "ureq", "zip"]
