[package]
name = "schedule-dsl"
version = "0.1.0"
edition = "2021"

[dependencies]
enumset = "1.0.6"
nom = "7.1.0"
serde = { version = "1.0.147", features = ["derive"], optional = true }
thiserror = "1.0.30"
time = { version = "0.3.7", optional = true }

[dev-dependencies]
maplit = "1.0.2"
serde_json = "1.0.87"
