[package]
name = "schedule-specs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumset = "1.0.6"
nom = "7.1.0"
serde = { version = "1.0.136", features = ["derive"], optional = true }
thiserror = "1.0.30"

[dev-dependencies]
maplit = "1.0.2"
serde_json = "1.0.78"

[features]
default = ["serde"]
