[package]
name = "selfinstaller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
owo-colors = "2.0.0"
tempfile = "3.2.0"
thiserror = "1.0.26"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.6"

[dev-dependencies]
argh = "0.1.6"
tempfile = "3.2.0"
