[package]
name = "snisni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = { version = "1.0.7", default-features = false }
futures = { version = "0.3.25", default-features = false }
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
tokio = { version = "1.22.0", default-features = false, optional = true }
tracing = { version = "0.1.37", default-features = false }
zbus = { version = "3.6.2", default-features = false }

[dev-dependencies]
tokio = { version = "1.22.0", default-features = false, features = ["rt", "macros"] }

[features]
async-io = ["zbus/async-io"]
tokio = ["dep:tokio", "zbus/tokio", "tokio/sync"]

[[example]]
name = "simple"
required-features = ["async-io"]

[[example]]
name = "tokio-channels"
required-features = ["tokio"]

[[example]]
name = "layout-change"
required-features = ["tokio"]
